--- a/_layouts/staffer.html
+++ b/_layouts/staffer.html
@@ -16,8 +16,8 @@
     {% if page.email %}
     <p><a href="mailto:{{ page.email }}">{{ page.email }}</a></p>
     {% endif %}
-    {% if page.section %}
-    <p class="staffer-meta">Quiz Section: {{ page.section | markdownify | strip_html }}</p>
+    {% if page.info %}
+    <p class="staffer-meta">{{ page.info | markdownify | strip_html }}</p>
     {% endif %}
     {% if page.office-hours %}
     <p class="staffer-meta">Office Hours: {{ page.office-hours | markdownify | strip_html }}</p>
