--- a/_layouts/staffer.html
+++ b/_layouts/staffer.html
@@ -20,7 +20,7 @@
     <p class="staffer-meta">{{ page.info | markdownify | strip_html }}</p>
     {% endif %}
     {% if page.office-hours %}
-    <p class="staffer-meta">Office Hours: {{ page.office-hours | markdownify | strip_html }}</p>
+    <p class="staffer-meta">Office Hours: {{ page.office-hours }}</p>
     {% endif %}
     {{ content }}
   </div>
