--- a/_layouts/staffer.html
+++ b/_layouts/staffer.html
@@ -17,10 +17,10 @@
     <p><a href="mailto:{{ page.email }}">{{ page.email }}</a></p>
     {% endif %}
     {% if page.info %}
-    <p class="staffer-meta">{{ page.info | markdownify | strip_html }}</p>
+    <p>{{ page.info | markdownify | strip_html }}</p>
     {% endif %}
     {% if page.office-hours %}
-    <p class="staffer-meta">Office Hours: {{ page.office-hours }}</p>
+    <p>Office Hours: {{ page.office-hours | markdownify | strip_html }}</p>
     {% endif %}
     {{ content }}
   </div>
