--- a/_sass/custom/custom.scss
+++ b/_sass/custom/custom.scss
@@ -57,5 +57,22 @@ summary {
 }
 
 .side-bar {
-   width: 125px;
+  z-index: 0;
+  display: flex;
+  flex-wrap: wrap;
+  background-color: $sidebar-color;
+
+  @include mq(md) {
+    flex-flow: column nowrap;
+    position: fixed;
+    width: $nav-width-md;
+    height: 100%;
+    border-right: $border $border-color;
+    align-items: flex-end;
+  }
+
+  @include mq(lg) {
+    width: calc((100% - #{$nav-width + $content-width}) / 20 + #{$nav-width});
+    min-width: $nav-width;
+  }
 }
